# energy-market-intel

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_STANDARDS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  llm-eval-nightly.yml  prompt-ci.yml
docs/: ARCHITECTURE.md
docs/adr/: ADR-000-index.md  ADR-000-template.md  ADR-001-llm-technology-stack.md  ADR-001-sovereign-tiered-llm-architecture.md  ADR-002-orchestration-framework-llamaindex.md  ADR-003-pgvector-primary-vector-store.md  ADR-004-bge-m3-fine-tuned-embeddings.md  README.md
docs/architecture/ADRs/: ADR-001-monorepo.md
docs/stack-evaluation/: EMI-32-scored-comparison-matrix.md
tests/: conftest.py
