[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-market-intel"
version = "0.1.0"
description = "LLM-powered automated market intelligence and competitor analysis for the UK Energy industry"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Energy Market Intel Team" }
]

[tool.uv.workspace]
members = [
    "packages/energy-schemas",
    "packages/llm-core",
    "packages/vector-store",
    "packages/observability",
    "services/api",
    "services/agents",
    "services/pipelines",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF", "N", "S", "ANN", "D"]
ignore = ["D203", "D213"]  # Prefer D211 + D212

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN001", "ANN201", "D100", "D101", "D102", "D103"]
"services/agents/**" = ["ANN101", "ANN102", "D100", "D105", "D107"]
"services/pipelines/**" = ["ANN101", "D100", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-report=xml -v"

[tool.coverage.run]
source = ["packages", "services"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert in test code
